--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,14 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+ 
+
   <div id="header">
     <% if signed_in? -%>
       <%= button_to t(".sign_out"), sign_out_path, method: :delete %>
     <% else -%>
       <%= link_to t(".sign_in"), sign_in_path %>
+      <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
     <% end -%>
   </div>
 
