--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
             <li><a href="#">Become A Host</a></li>
             <li><a href="#">Help</a></li>
             <% if signed_in? -%>
-              <li><%= button_to t(".sign_out"), sign_out_path, method: :delete %></li>
+              <li><%= link_to t(".sign_out"), sign_out_path, method: :delete %></li>
             <% else -%>
               <li><%= link_to t(".sign_up"), sign_up_path %></li>
               <li id="dropdownMenu1" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><a href="#">Log in</a></li>
