added CRUD feature for list

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       
       
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Become A Host</a></li>
+            <li><a href="/lists/new">Become A Host</a></li>
             <li><a href="#">Help</a></li>
             <% if signed_in? -%>
               <li><%= link_to t(".sign_out"), sign_out_path, method: :delete %></li>
