--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "lists";
+@import "users";
 
+.menu-avatar {
+	width: 50px;
+	height: 50px;
+	display: block;
+	border: 1px solid;
+	border-radius: 50%;
+	overflow: hidden;
+}
