--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,22 @@
             <li><a href="/lists/new">Become A Host</a></li>
             <li><a href="#">Help</a></li>
             <% if signed_in? -%>
-              <li><%= link_to t(".sign_out"), sign_out_path, method: :delete %></li>
-            <% else -%>
+              <li id="user-menu" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <%= link_to do %>
+                <div class="menu-avatar">
+                  <%=image_tag current_user.avatar.small_thumb.url %>
+                </div>
+                
+                <%end%>
+              </li>
+              <ul class="dropdown-menu" aria-labelledby="user-menu">
+                 <li><%= link_to "Edit Profile", [:edit, current_user]%></li>
+                 <li><%= link_to t(".sign_out"), sign_out_path, method: :delete %></li>
+              </ul>
+
+
+             
+            <% else %>
               <li><%= link_to t(".sign_up"), sign_up_path %></li>
               <li id="dropdownMenu1" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><a href="#">Log in</a></li>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
