--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -6,9 +6,16 @@
 
 	<div class="row tetx-center">
 
-		<%=form_for :list, url: lists_path do |f| %>
-			<%= f.text_field :home_type %>
-			<%= f.text_field :room_type %>
+		<%=form_for :list, :html => {:multipart => true}, url: lists_path do |f| %>
+			<%= f.label :home_type %><br>
+			<%= f.text_field :home_type %> <br><br>
+
+				<%= f.label :room_type %><br>
+			<%= f.text_field :room_type %><br><br>
+
+			<%= f.label :pictures %><br>
+			<%= f.file_field :images, multiple: true %>
+			
 			<%= f.submit %>
 
 		<%end%>
