--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,47 @@
 <div class="container-fluid">
+	<div class="row listing-pic">
+
+		
+				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="false">
+				  <!--  -->
+
+				  <!-- Wrapper for slides -->
+				  <div class="carousel-inner" role="listbox">
+
+				 
+				    <div class="item active">
+				    <% if !@list.images.empty? %>	
+				     <%=  image_tag @list.images[0].url %>
+				    <%end%>
+				    </div>
+ 					<% if !@list.images.empty? %>
+				     <%@list.images[1..-1].each do |picture| %>
+				    	<div class="item">
+				    		<%= image_tag picture.url %>
+				    	</div>
+				    <%end%>
+				    <%end%>
+				  </div>
+
+				  <!-- Controls -->
+				  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+				  </a>
+				</div>
+
+		
+	</div>
+
+<div class="row">
+	
+
+
+</div>
 	<P>Home Type: <%=@list.home_type %></P>
 	<P>Room Type: <%=@list.room_type %></P>
 	<p>				<%if signed_in?%>
@@ -8,3 +51,5 @@
 						<%end%>
 					<%end%></p>
 </div>
+
+
