--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,16 +1,35 @@
 <div class="container-fluid">
 
-<div class="row tetx-center">
+<div class="row text-center">
 
 		<%=form_for @list, url: @list, :html => {:multipart => true}, method: :patch do |f| %>
 			<%= f.label :home_type %><br>
 			<%= f.text_field :home_type %> <br><br>
 
-				<%= f.label :room_type %><br>
+			<%= f.label :room_type %><br>
 			<%= f.text_field :room_type %><br><br>
 
-			<%= f.label :image %><br>
-			<%= f.file_field :images, multiple: true %>
+			<%= f.label :accomadation %><br>
+			<%= f.text_field :accomadation %> <br><br>
+
+			<%= f.label :rental %><br>
+			<%= f.text_field :rental %> <br><br>
+
+			<%= f.label :city %><br>
+			<%= f.text_field :city %> <br><br>
+
+			<%= f.label :start_avail %><br>
+			<%= f.text_field :start_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy' %> <br><br>
+
+			<%= f.label :end_avail %><br>
+			<%= f.text_field :end_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy' %> <br><br>
+			
+			<%= f.label :description %><br>
+			<%= f.text_area :description %><br><br>
+
+			<%= f.label :pictures %><br>
+			<%= f.file_field :images, multiple: true %><br><br>
+			
 			
 			<%= f.submit %>
 
