--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,20 +1,38 @@
-<div class="container-fluid">
+<div class="container">
 
 	<div class="row text-center">
 		<div class="col-xs-12 list-title"> List your property</div>
 	</div>
 
-	<div class="row tetx-center">
+	<div class="row text-center">
 
 		<%=form_for :list, :html => {:multipart => true}, url: lists_path do |f| %>
 			<%= f.label :home_type %><br>
 			<%= f.text_field :home_type %> <br><br>
 
-				<%= f.label :room_type %><br>
+			<%= f.label :number_of_room %><br>
 			<%= f.text_field :room_type %><br><br>
 
+			<%= f.label :accomadation %><br>
+			<%= f.text_field :accomadation %> <br><br>
+
+			<%= f.label :rental %><br>
+			<%= f.text_field :rental %> <br><br>
+
+			<%= f.label :city %><br>
+			<%= f.text_field :city %> <br><br>
+
+			<%= f.label :start_avail %><br>
+			<%= f.text_field :start_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy' %> <br><br>
+
+			<%= f.label :end_avail %><br>
+			<%= f.text_field :end_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy' %> <br><br>
+			
+			<%= f.label :description %><br>
+			<%= f.text_area :description %><br><br>
+
 			<%= f.label :pictures %><br>
-			<%= f.file_field :images, multiple: true %>
+			<%= f.file_field :images, multiple: true %><br><br>
 			
 			<%= f.submit %>
 
