--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <%= include_gon %>
+  
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  
+  <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
   <%= csrf_meta_tag %>
+
 </head>
 <body>
 
