--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,18 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-datepicker3";
 @import "lists";
 @import "users";
+@import "reservations";
+@import "transactions";
+@import "welcome";
+
+
 
 .menu-avatar {
+
 	width: 50px;
 	height: 50px;
 	display: block;
@@ -13,3 +20,33 @@
 	border-radius: 50%;
 	overflow: hidden;
 }
+
+.navbar-default {
+    background-color: transparent;
+    border-color: transparent;
+    color: white;
+    height: 80px;
+
+    .top_menu {
+		margin-top: 15px;
+    }
+}
+
+a.navbar-brand {
+	font-family: 'Raleway', sans-serif;
+	font-size:40px;
+
+	
+}
+.navbar-default .navbar-brand {
+    color: #ffffff;
+}
+.navbar-default .navbar-nav > li > a {
+    color: white;
+    font-family: 'Raleway', sans-serif;
+}
+
+#user-menu {
+	margin-top: -14px;
+}
+
