--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,12 @@
   <%= csrf_meta_tag %>
 
 </head>
-<body>
+<body class="<%=controller_name%> <%=action_name%>">
 
 
   
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="top_menu container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -23,7 +23,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
-            myPairBbnb
+            W
           </a>
         </div>
 
@@ -31,7 +31,7 @@
       
       
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/lists/new">Become A Host</a></li>
+            <li><a id="new-list" href="lists/new">Become A Host</a></li>
             <li><a href="#">Help</a></li>
             <% if signed_in? -%>
               <li id="user-menu" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
