--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,40 @@
-<h1>Welcome to PairBnb</h1>
+<div class="container-fluid">
+	<div class="row main">
+		<div class="col-xs-12 text-center">
+			<h1>WELCOME TO PAIRVnV</h1>
 
-<p><a href="/lists">See all listings</a></p>
+				
+
+
+		</div>
+		<div class="tag col-xs-12 text-center">
+			Keep your traveling experience better
+			<p><a href="/lists">See all listings</a></p>
+		</div>
+	</div>
+
+	<div class="search row">
+		<div class="col-xs-12 text-center">
+			<form class="search-form form-inline">
+				<div class="form-group">
+					<input class="where form-control" type="text" placeholder="Where do you want to go?">
+					
+				</div>
+				<div class="form-group">
+					<input class="form-control" type="text" data-provide="datepicker" placeholder="Check-in">
+					
+				</div>
+				<div class="form-group">
+					<input class="form-control" type="text" data-provide="datepicker" placeholder="Check-out">
+					
+				</div>
+				<button type="submit" class="btn btn-default">Search</button>
+			</form>
+		</div>
+
+	</div>
+
+</div>
+
+
 
