--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -3,7 +3,7 @@
 			<div class="panel-body">
 				<div class="row">
 					<div class="col-xs-8">
-						Make payment for : RM<%=@reservation.list.rental%>
+						Make payment for : RM<%=@reservation.total%>
 
 					</div>
 					<div class="col-xs-4 text-center">
