--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,17 +15,18 @@
 
 	<div class="search row">
 		<div class="col-xs-12 text-center">
-			<form class="search-form form-inline">
+			<form method="get" action="/searches/index" class="search-form form-inline">
+			<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 				<div class="form-group">
-					<input class="where form-control" type="text" placeholder="Where do you want to go?">
+					<input class="where form-control" type="text" name="query[text]" placeholder="Where do you want to go?">
 					
 				</div>
 				<div class="form-group">
-					<input class="form-control" type="text" data-provide="datepicker" placeholder="Check-in">
+					<input class="form-control" type="text" name="query[start_date]" data-provide="datepicker" data-date-format="dd-mm-yyyy" data-date-start-date="0d" placeholder="Check-in">
 					
 				</div>
 				<div class="form-group">
-					<input class="form-control" type="text" data-provide="datepicker" placeholder="Check-out">
+					<input class="form-control" type="text" name="query[end_date]" data-provide="datepicker" data-date-format="dd-mm-yyyy" data-date-start-date="0d" placeholder="Check-out">
 					
 				</div>
 				<button type="submit" class="btn btn-default">Search</button>
