--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -4,38 +4,124 @@
 		<div class="col-xs-12 list-title"> List your property</div>
 	</div>
 
-	<div class="row text-center">
+	<div class="row">
 
 		<%=form_for :list, :html => {:multipart => true}, url: lists_path do |f| %>
-			<%= f.label :home_type %><br>
-			<%= f.text_field :home_type %> <br><br>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :home_type %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_field :home_type %> 
+				  </div>
+				</div>
+				
+			</div>
 
-			<%= f.label :number_of_room %><br>
-			<%= f.text_field :room_type %><br><br>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :number_of_room %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_field :room_type %> 
+				  </div>
+				</div>
 
-			<%= f.label :accomadation %><br>
-			<%= f.text_field :accomadation %> <br><br>
+			</div>
 
-			<%= f.label :rental %><br>
-			<%= f.text_field :rental %> <br><br>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :accomadation %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_field :accomadation %> 
+				  </div>
+				</div>
 
-			<%= f.label :city %><br>
-			<%= f.text_field :city %> <br><br>
+			</div>
 
-			<%= f.label :start_avail %><br>
-			<%= f.text_field :start_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy', "data-date-start-date" => "0d" %> <br><br>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :rental %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_field :rental %> 
+				  </div>
+				</div>
 
-			<%= f.label :end_avail %><br>
-			<%= f.text_field :end_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy', "data-date-start-date" => "0d" %> <br><br>
+			</div>
 			
-			<%= f.label :description %><br>
-			<%= f.text_area :description %><br><br>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :city %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_field :city %>  
+				  </div>
+				</div>
 
-			<%= f.label :pictures %><br>
-			<%= f.file_field :images, multiple: true %><br><br>
+			</div>
 			
-			<%= f.submit %>
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :start_avail %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_field :start_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy', "data-date-start-date" => "0d" %>   
+				  </div>
+				</div>
 
+			</div>
+
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :end_avail %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_field :end_avail, "data-provide" => 'datepicker', "data-date-format" => 'dd-mm-yyyy', "data-date-start-date" => "0d" %> 
+				  </div>
+				</div>
+
+			</div>
+
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :description %><</h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.text_area :description %> 
+				  </div>
+				</div>
+
+			</div>
+
+			<div class="col-md-6">
+				<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><%= f.label :pictures %></h3>
+				  </div>
+				  <div class="panel-body">
+				    <%= f.file_field :images, multiple: true %> 
+				  </div>
+				</div>
+
+			</div>
+			<div class="col-md-12">
+				<%= f.submit %>
+			</div>
+
+
+			
+		</div>
 		<%end%>
 	</div>
 
