--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row text-center">
 		<% @list.each do |item| %>
-			<div class=" listings col-md-4">
+			<div class=" listings col-md-4 col-sm-12">
 
 				<div class="row index-listing-pic ">
 					<div id="carousel-example-generic-<%=item.id%>" class="carousel slide" data-ride="carousel" data-interval="false">
