did some mailer clean up

--- a/app/views/reservation_mailer/booking_email.html.erb
+++ b/app/views/reservation_mailer/booking_email.html.erb
@@ -9,5 +9,5 @@
 </p>
 <p>Total amount: <%=@total%></p>
 
-<p>Listing: <%=@listing_link%></p>
-<p>Reservation: <%=@reservation_link%></p>
+<p>Listing: <%= link_to 'Click here', @listing_link %>
+<p>Reservation: <%= link_to 'Click here', @reservation_link %>
