--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -7,8 +7,11 @@
 
 					</div>
 					<div class="col-xs-4 text-center">
+						<%if @reservation.user.id == current_user.id%>	
+							<%=link_to "Checkout", new_transaction_path(list_id: params[:list_id], reservation_id: params[:id]), data: { no_turbolink: true }, class: "button" unless current_user.reservations.blank?%>
 						
-						<%=link_to "Checkout", new_transaction_path(list_id: params[:list_id], reservation_id: params[:id]), data: { no_turbolink: true }, class: "button" unless current_user.reservations.blank?%>
+							
+						<%end%>
 					</div>
 					
 											
