--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -68,8 +68,8 @@
 				  <div class="panel-body">
 
 				  <form action="/lists/<%=@list.id%>/reservations/new" method="get">
-				  	<input name="start_date" type="text" class="form-control" data-provide="datepicker" data-date-format="yyyy-mm-dd" data-date-start-date="<%=@list.start_avail%>" data-date-end-date="<%=@list.end_avail%>" data-date-dates-disabled="<%=@not%>"> <br><br>
-				  	<input name="end_date" type="text" class="form-control" data-provide="datepicker" data-date-format="yyyy-mm-dd" data-date-start-date="<%=@list.start_avail+1%>" data-date-end-date="<%=@list.end_avail+1%>" data-date-dates-disabled="<%=@not_end%>">
+				  	<input name="start_date" type="text" class="form-control" data-provide="datepicker" data-date-format="yyyy-mm-dd" data-date-start-date="0d" data-date-end-date="<%=@list.end_avail%>" data-date-dates-disabled="<%=@not%>"> <br><br>
+				  	<input name="end_date" type="text" class="form-control" data-provide="datepicker" data-date-format="yyyy-mm-dd" data-date-start-date="+1d" data-date-end-date="<%=@list.end_avail+1%>" data-date-dates-disabled="<%=@not_end%>">
 
 				  	<button class="btn btn-default" type="submit">next</button>
 
