--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,5 +69,23 @@
   
 
   <%= yield %>
+
+  <footer>
+    <div class="container-fluid">
+      <div class="social-wrapper row text-center">
+
+      <ul class="list-inline">
+
+        <li class="circle"><a href=""><i class="fa fa-facebook-square fa-3x"></i></a></li>
+        <li class="circle"><a href=""><i class="fa fa-twitter-square fa-3x"></i></a></li>
+        <li class="circle"><a href=""><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+      </ul>
+       
+       
+       
+           
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
