--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,6 +36,21 @@
 	</div>
 
 </div>
+<div class="container">	
+	<div class="feature row">
+		<div class="frame col-md-7">
+			
+		</div>
+		<div class="frame col-md-5">
+			
+		</div>
+		<div class="frame col-md-4"></div>
+		<div class="frame col-md-4"></div>
+		<div class="frame col-md-4"></div>
+
+	</div>
+
+</div>
 
 
 
