--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -57,6 +57,33 @@
 	    }
 }
 
+.feature {
+	height: 400px;
+	padding: 60px 100px 0 100px;
+	margin-bottom: 150px;
+
+
+	.col-md-4 {
+	    width: 30.9%;
+	}
+
+	.col-md-7 {
+    	width: 53.1%;
+	}
+
+	.col-md-5 {
+    	width: 41.66666667%;
+	}
+
+	.frame {
+		border: solid 1px gray;
+		height: 200px;
+		padding: 0 30px 0 30px;
+		margin: 20px 10px 0 10px;
+
+	}
+}
+
 
 
 
