cange seacrh button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -29,7 +29,7 @@
 					<input class="form-control" type="text" name="query[end_date]" data-provide="datepicker" data-date-format="dd-mm-yyyy" data-date-start-date="0d" placeholder="Check-out">
 					
 				</div>
-				<button type="submit" class="btn btn-default">Search</button>
+				<button type="submit" class="btn btn-default">Search listing</button>
 			</form>
 		</div>
 
