--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,15 +38,15 @@
 </div>
 <div class="container">	
 	<div class="feature row">
-		<div class="frame col-md-7">
+		<div class="frame col-md-7 america">
 			
 		</div>
-		<div class="frame col-md-5">
+		<div class="frame col-md-5 asia">
 			
 		</div>
-		<div class="frame col-md-4"></div>
-		<div class="frame col-md-4"></div>
-		<div class="frame col-md-4"></div>
+		<div class="frame col-md-4 africa"></div>
+		<div class="frame col-md-4 australia"></div>
+		<div class="frame col-md-4 europe"></div>
 
 	</div>
 
