--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -82,6 +82,32 @@
 		margin: 20px 10px 0 10px;
 
 	}
+
+	.america {
+		background-image: url("america.jpg");
+		background-size: cover;
+	}
+
+	.asia {
+		background-image: url("asia.jpg");
+		background-size: cover;
+	}
+
+	.africa {
+		background-image: url("africa.jpg");
+		background-size: cover;
+	}
+
+	.europe {
+		background-image: url("europe.jpg");
+		background-size: cover;
+
+	}
+
+	.australia {
+		background-image: url("australia.jpg");
+		background-size: cover;
+	}
 }
 
 
