--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
-<div id="clearance" class="sign-up">
-  <h2><%= t(".title") %></h2>
+<div class="row text-center">
+  <div class="panel panel-default">
+  <div class="panel-heading"><h2><%= t(".title") %></h2></div>
+  <div class="panel-body">
+    <div id="clearance" class="sign-up">
+  
 
   <%= form_for @user do |form| %>
     <%= render partial: '/users/form', object: form %>
@@ -9,7 +13,14 @@
     </div>
 
     <div class="other-links">
-      <%= link_to t(".sign_in"), sign_in_path %>
+     
     </div>
   <% end %>
+</div>
+
+  </div>
+</div>
+
+
+
 </div>
