--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,46 +1,49 @@
 <div class="container">
 	<div class="row">
-		<ul class="nav nav-tabs nav-stacked col-md-3" role="tablist">
-	    
-	    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Edit Profile</a></li>
-	    
-		  <li><%= link_to "View Profile", user_path(@user.id) %></li>
-		  
-	
-	    
-	  </ul>
-	  
-	  <!-- Tab panes -->
-	  <div class="tab-content">
+		
+
 	   
-	    <div role="tabpanel" class="tab-pane active" id="profile">
-	    	 <%= form_for @user, :html => {:multipart => true} do |form| %>
-			   <div class="text-field">
+	    
+	    	<%= form_for @user, :html => {:multipart => true}, class: 'edit' do |form| %>
+			    <div class="text-field">
 
-			   	 <%= form.label :firstname %>
-				  <%= form.text_field :firstname, type: 'text' %>
 
-				   <%= form.label :lastname %>
-				  <%= form.text_field :lastname, type: 'text' %>
+				   <div class="form-group">
+				    
+				     <%= form.label :firstname %>
+					  <%= form.text_field :firstname, type: 'text', class: 'form-control' %>
+				   </div>
 
+			   	
+				   <div class="form-group">
+				   	<%= form.label :lastname %>
+				  	<%= form.text_field :lastname, type: 'text', class: 'form-control' %>
+				   </div>
   
-				  <%= form.label :email %>
-				  <%= form.text_field :email, type: 'email' %>
 
-				  <%= form.label :avatar %>
-				  <%= form.file_field :avatar %>
+  					<div class="form-group">
+					  <%= form.label :email %>
+					  <%= form.text_field :email, type: 'email', class: 'form-control' %>
+					</div>
+
+					<div class="form-group">
+						<div class="user-avatar">
+								<%=image_tag @user.avatar.thumb.url%>
+
+						</div>
+				  		<%= form.label :avatar %>
+				  		<%= form.file_field :avatar %>
+				  	</div>
 				</div>
 
-			    <div class="submit-field">
-			      <%= form.submit %>
+			    <div class="submit-field pull-right">
+			      <%= form.submit class: 'btn btn-default'%>
+			      <%= link_to "Cancel", user_path(@user),  class: 'btn btn-default'%>
 			    </div>
 
 			    
-			  <% end %>
+			<% end %>
 
-	    </div>
-	    
-	  </div>
 	</div>
 
 
