--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -74,7 +74,7 @@
 											<div class="col-xs-10">
 												<div class="row">
 													<div class="col-xs-7">
-														<%=item.home_type %> 
+														<%=item.home_type %> | <%= link_to "details..", list_path(item.id) %>
 													</div>
 													<div class="col-xs-5">
 														<%if item.reservations.empty? %>
